# telegram-twitch-notifier

./: .dockerignore  Cargo.toml
.github/workflows/: build-and-deploy.yml
docker/: Dockerfile
src/: bot.rs  config.rs  main.rs  subscription_manager.rs  telegram_bot.rs  twitch_webhook.rs
src/backend/: Cargo.toml
src/backend/src/: config.rs  main.rs  subscription_manager.rs  telegram_bot.rs  twitch_webhook.rs
src/backend/src/repositories/: subscriptions.rs
src/backend/src/web_app/: auth.rs  mod.rs  subscriptions.rs  validation.rs
src/frontend/: Cargo.toml  Trunk.toml  index.html
src/frontend/src/: main.rs
