[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.20.3"
eyre = { version = "0.6" }

tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"

teloxide = { version = "0.13.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }
twitch_api = { version = "0.7.0", features = ["reqwest", "helix", "eventsub", "hmac"] }
twitch_oauth2 = "0.15.1"

axum = { version = "0.8.1", features = ["http2"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
http-body-util = "0.1.2"

retainer = "0.3.0"

reqwest = "0.12.12"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
mongodb = "3.2.1"

url = "2.5.4"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
